# maki

./: .gitignore  .release-please-manifest.json  .sops.yaml  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docker.yml  release.yml
adr/: README.md  adr-001-identity-and-philosophy.md  adr-002-brain-stack.md  adr-003-component-architecture.md  adr-004-sandboxing-and-security.md  adr-005-autonomy-and-approval.md  adr-006-mission-system.md  adr-007-cortex-interface.md  adr-008-memory-and-identity-continuity.md  adr-009-infrastructure-and-ha.md  adr-010-senses.md  adr-011-validation-phase.md  adr-012-infrastructure-management.md  adr-013-immune-system.md  adr-014-idle-heartbeat-loop.md  adr-015-body-edge-and-compute.md
images/maki-cortex/: Dockerfile
images/maki-ears/: Dockerfile
images/maki-immune/: Dockerfile
images/maki-recall/: Dockerfile
images/maki-stem/: Dockerfile
images/maki-synapse/: Dockerfile
images/maki-vault/: Dockerfile
infra/: .sops.yaml  root.hcl  secrets.enc.yaml  secrets.yaml.template
infra/environments/ikiikiinu/: env.hcl
manifests/: maki-cortex.yaml  maki-ears.yaml  maki-embed.yaml  maki-graph.yaml  maki-immune.yaml  maki-recall.yaml  maki-stem.yaml  maki-synapse.yaml  maki-vault.yaml  secrets.enc.yaml
pkgs/maki-common/: CHANGELOG.md  pyproject.toml
pkgs/maki-cortex/: CHANGELOG.md  pyproject.toml
pkgs/maki-ears/: CHANGELOG.md  pyproject.toml
pkgs/maki-immune/: CHANGELOG.md  pyproject.toml
pkgs/maki-recall/: CHANGELOG.md  pyproject.toml
pkgs/maki-stem/: CHANGELOG.md  pyproject.toml
pkgs/maki-synapse/: CHANGELOG.md  pyproject.toml
scripts/: add_priority_labels.py  dump_todos_kv.py
(+88 files in other folders)
